<resources>
    <string name="app_name">Easy Math for Elementary Students</string>
    <string name="start_game">시작하기</string>
    <string name="addButtonLv1">더하기 초급</string>
    <string name="addButtonLv2">더하기 응용</string>
    <string name="minusButtonLv1">빼기 초급</string>
    <string name="minusButtonLv2">빼기 응용</string>
    <string name="gopButtonLv1">곱하기 초급</string>
    <string name="gopButtonLv2">곱하기 응용</string>
    <string name="tv_bottom">시작을 터치하세요</string>
    <string name="about">ABOUT</string>
    <string name="introduce">\n 안녕하세요. MinkiPaPa 입니다.\n\n 2022년 올해 초등학교 2학년이 된 제 아들 민기가 너무너무 공부가 재미없다고 해서 어떻게 하면 쉽게 공부에 흥미를 줄까하는 생각에 간단히 스피드 퀴즈 앱을 만들게 되었습니다.\n\n 개인 프로젝트이기 때문에 많이 부족하고 디자인도 엉성하지만 사용하시는 모든 어린이 여러분들이 재미있게 이 앱으로 조금이나마 공부에 흥미를 가질 수 있기를 바랍니다.\n\n 마지막으로 김민기! 아빠가 너무 너무 사랑해!</string>
    <string name="home">HOME</string>
</resources>