<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_backgroud"
    android:soundEffectsEnabled="true"
    tools:context=".SubActivity">

    <Button
        android:id="@+id/gop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="86dp"
        android:fontFamily="sans-serif"
        android:shadowRadius="8"
        android:soundEffectsEnabled="true"
        android:text="@string/gopButtonLv1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#D3D3D3"
        app:cornerRadius="8dp"
        app:iconTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus2" />

    <Button
        android:id="@+id/add2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:shadowRadius="8"
        android:soundEffectsEnabled="true"
        android:text="@string/addButtonLv2"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#D3D3D3"
        app:cornerRadius="8dp"
        app:iconTint="#9C27B0"
        app:layout_constraintBottom_toTopOf="@+id/minus1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add1" />

    <Button
        android:id="@+id/add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="123dp"
        android:fontFamily="sans-serif"
        android:shadowRadius="8"
        android:soundEffectsEnabled="true"
        android:text="@string/addButtonLv1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#D3D3D3"
        app:cornerRadius="8dp"
        app:iconTint="#9C27B0"
        app:layout_constraintBottom_toTopOf="@+id/add2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:shadowRadius="8"
        android:soundEffectsEnabled="true"
        android:text="@string/minusButtonLv1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#D3D3D3"
        app:cornerRadius="8dp"
        app:iconTint="#9C27B0"
        app:layout_constraintBottom_toTopOf="@+id/minus2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add2" />

    <Button
        android:id="@+id/minus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:shadowRadius="8"
        android:soundEffectsEnabled="true"
        android:text="@string/minusButtonLv2"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#D3D3D3"
        app:cornerRadius="8dp"
        app:iconTint="#9C27B0"
        app:layout_constraintBottom_toTopOf="@+id/gop1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus1" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="58dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toTopOf="@+id/add1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        app:srcCompat="@android:drawable/stat_sys_headset" />

</androidx.constraintlayout.widget.ConstraintLayout>